--- a/package.json
+++ b/package.json
@@ -5,18 +5,76 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "pretty": "prettier --write src/**/*.js"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@expo-google-fonts/nunito-sans": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
+    "@expo-google-fonts/roboto-condensed": "^0.1.0",
+    "@expo/vector-icons": "^10.2.1",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/native": "^5.8.6",
+    "@react-navigation/stack": "^5.12.3",
+    "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
+    "@ui-kitten/moment": "^5.0.0",
+    "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "expo": "~39.0.2",
+    "expo-blur": "~8.2.0",
     "expo-status-bar": "~1.0.2",
+    "immer": "^7.0.14",
+    "lodash": "^4.17.20",
+    "modal-react-native-web": "^0.2.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-animatable": "^1.3.3",
+    "react-native-calendars": "^1.403.0",
+    "react-native-emoji": "^1.8.0",
+    "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~2.10.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.2.1",
+    "use-dynamic-refs": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@expo/webpack-config": "^0.12.43",
+    "@ui-kitten/metro-config": "^5.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
