--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@expo-google-fonts/nunito-sans": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/roboto-condensed": "^0.1.0",
-    "@expo/vector-icons": "^10.2.1",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.6",
@@ -24,33 +24,38 @@
     "@ui-kitten/moment": "^5.0.0",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
-    "expo": "~39.0.2",
-    "expo-blur": "~8.2.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^41.0.0",
+    "expo-blur": "~9.0.3",
+    "expo-localization": "~10.1.0",
+    "expo-splash-screen": "~0.10.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
+    "i18next": "^19.8.4",
     "immer": "^7.0.14",
     "lodash": "^4.17.20",
     "modal-react-native-web": "^0.2.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
-    "react-native-calendars": "^1.403.0",
+    "react-native-calendars": "^1.505.0",
     "react-native-emoji": "^1.8.0",
     "react-native-extra-dimensions-android": "^1.2.5",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~2.10.1",
-    "react-native-svg": "^12.1.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
@@ -59,9 +64,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@expo/webpack-config": "^0.12.43",
+    "@expo/webpack-config": "~0.12.63",
     "@ui-kitten/metro-config": "^5.0.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
