--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
-    "i18next": "^19.8.4",
+    "i18next": "^20.2.2",
+    "i18next-async-storage-backend": "^1.0.2",
+    "i18next-chained-backend": "^2.1.0",
+    "i18next-fs-backend": "^1.1.1",
+    "i18next-xhr-backend": "^3.2.2",
     "immer": "^7.0.14",
     "lodash": "^4.17.20",
     "modal-react-native-web": "^0.2.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.8.15",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.505.0",
