--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "pretty": "prettier --write src/**/*.js"
   },
   "dependencies": {
-    "@eva-design/eva": "^2.0.0",
+    "@eva-design/eva": "^2.1.0",
     "@expo-google-fonts/nunito-sans": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/roboto-condensed": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
-    "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/components": "^5.1.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "@ui-kitten/moment": "^5.0.0",
     "axios": "^0.21.0",
+    "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.16.1",
     "expo": "^41.0.0",
     "expo-blur": "~9.0.3",
@@ -44,7 +49,7 @@
     "react-i18next": "^11.8.15",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
-    "react-native-calendars": "^1.505.0",
+    "react-native-calendars": "1.1260.0",
     "react-native-emoji": "^1.8.0",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~1.10.2",
