--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
     "@ui-kitten/components": "^5.1.0",
