--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^2.16.1",
     "expo": "^41.0.0",
     "expo-blur": "~9.0.3",
+    "expo-constants": "^10.1.3",
     "expo-localization": "~10.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -78,6 +79,7 @@
     "@babel/core": "~7.9.0",
     "@expo/webpack-config": "~0.12.63",
     "@ui-kitten/metro-config": "^5.0.0",
+    "dotenv": "^10.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
