--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-i18next": "^11.8.15",
+    "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "1.1260.0",
