--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "/mobile",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -34,6 +35,7 @@
     "expo-blur": "~9.0.3",
     "expo-constants": "^10.1.3",
     "expo-localization": "~10.1.0",
+    "expo-screen-orientation": "~3.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
