--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-error-boundary": "^3.1.3",
     "react-i18next": "^11.8.15",
     "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
