--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "1.1260.0",
     "react-native-emoji": "^1.8.0",
+    "react-native-error-boundary": "^1.1.11",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~2.1.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.0.0",
